--- a/scripts/install
+++ b/scripts/install
@@ -4,16 +4,14 @@
 [ "$1" = "-p" ] && PYTHON=$2 || PYTHON="python3"
 
 REQUIREMENTS="requirements.txt"
-VENV="venv"
 
 set -x
 
 if [ -z "$GITHUB_ACTIONS" ]; then
-    "$PYTHON" -m venv "$VENV"
-    PIP="$VENV/bin/pip"
+    "$PYTHON" -m venv venv
+    PIP="venv/bin/pip"
 else
     PIP="pip"
 fi
 
 "$PIP" install -r "$REQUIREMENTS"
-"$PIP" install -e .
