--- a/scripts/install
+++ b/scripts/install
@@ -15,5 +15,5 @@ else
     PIP="pip"
 fi
 
+"$PIP" install -U "pip >= 20.2" setuptools wheel
 "$PIP" install -r "$REQUIREMENTS"
-"$PIP" install -e .
