--- a/scripts/install
+++ b/scripts/install
@@ -15,5 +15,5 @@ else
     PIP="pip"
 fi
 
-"$PIP" install -U "pip >= 21.0" setuptools wheel
+"$PIP" install -U pip setuptools wheel
 "$PIP" install -r "$REQUIREMENTS"
